@@ -145,6 +145,9 @@ multi-signature generation
 82. qmulti.c: queue program can be specified on command line
 83. svctool.in: use qmail-dkim qmail-spamfilter chain in QMAILQUEUE
 84. svctool.in: override bogofilter.cf path with --sysconfdir
+- 29/03/2023
+85. qlocal_upgrade.in: upgrade qmail-send, slowq-send service to use
+    --setgroups
 
 * Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.2-1.1%{?dist}
 Release 3.0.2-1.1 Start 08/09/2022 End 30/11/2023
